types/map/TransponderElement: Fix Java9+ deprecation for new Boolean.